k8s/services.yml
---
apiVersion: v1
kind: Service
metadata:
  namespace: hello
  name: hello-api-service
spec:
  type: NodePort
  selector:
    app: hello-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000


---
apiVersion: v1
kind: Service
metadata:
  namespace: chaz
  name: postgres
spec:
  type: ClusterIP
  selector:
    app: hello-db
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
