k8s/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: hello
  name: hello-api-ing
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  rules:
    - host: hello.chaz.pro
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hello-api-service
                port:
                  number: 80
  tls:
    - hosts:
        - hello.chaz.pro
      secretName: hello-api-tls-secret
